# talos_bridge_ROS2

./: .gga  .gitignore  .gitmodules  AGENTS.md  README.md  fixes.md  run_tests.sh
scripts/: chat.py
src/: changes.md
src/hw_bridge/: package.xml  setup.cfg  setup.py
src/hw_bridge/hw_bridge/: protocol_handler_node.py  uart_driver.py
src/hw_bridge/test/: test_uart_driver_node.py
src/ia_bridge/: config.yaml  package.xml  setup.cfg  setup.py
src/ia_bridge/ia_bridge/: motor_services_node.py  motor_topics_node.py
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/action/: DriveWheelPosition.action  DriveWheelVelocity.action
src/robot_interfaces/msg/: InternalPositionData.msg  WheelPositionState.msg  WheelVelocityState.msg
src/robot_interfaces/srv/: Chat.srv  GetPIDGains.srv  GetPositionPIDGains.srv  SetPIDGains.srv  SetPositionPIDGains.srv  SetWheelPosition.srv  SetWheelVelocity.srv
src/talos_bridge/: package.xml  setup.cfg  setup.py
src/talos_bridge/launch/: talos_start.launch.py
src/talos_bridge/talos_bridge/: mock_position.py  mock_service.py
src/test_package/: package.xml  setup.py
src/test_package/test_package/: hardware_mock.py  publisher.py
